# gis

./: .gitignore  CLAUDE.md  glossary.md  pyproject.toml
datasets/: my_area.osm.pbf
osmguide/: __init__.py  __main__.py  base_map.py  loader.py
topics/indexes/: README.md  indexes.py
topics/indexes/cell/s2/: README.md  s2.py
topics/indexes/tree/r-tree/: README.md
